--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,12 +1,18 @@
-<div class="mt-3 ps-3" style="color: teal;">
+<div class="mt-3 ps-3" style="color: teal;"> 
   <h3>{{data}}</h3>
 </div>
 <h1 class="  text-center mt-5" style="color: rgb(26, 91, 91);" >Log In</h1>
 
-    <form  (ngSubmit)="login()" class="container w-50 border text-center mt-2 " style="border-radius: 10px; background-color: rgba(24, 93, 114, 0.579);">
-    <input id="u1" [(ngModel)]="acno" name="acnum" type="text" [placeholder]="data1" class="form-control mt-5" >
-      <input id="p1" [(ngModel)]="psw" name="password" type="password" placeholder="password" class="form-control mt-3" > 
-      <button  type="submit" class="btn btn-info mt-3 text-center mb-3 ">
+    <form  [formGroup]="loginForm" class="container w-50 border text-center mt-2 " style="border-radius: 10px; background-color: rgba(24, 93, 114, 0.579);">
+    <input id="u1" formControlName="acno" name="acnum" type="text" [placeholder]="data1" class="form-control mt-5" >
+    <div *ngIf="this.loginForm.get('acno')?.errors && this.loginForm.get('acno')?.touched" class="text-danger mt-1 text-start">
+      <p>contain numbers only</p>
+  </div>
+      <input id="p1" formControlName="psw" name="password" type="password" placeholder="password" class="form-control mt-3" > 
+      <div *ngIf="this.loginForm.get('psw')?.errors && this.loginForm.get('psw')?.touched" class="text-danger mt-1 text-start">
+        <p>contain letters and  number</p>
+    </div>
+      <button (click)="login()"  type="submit" class="btn btn-info mt-3 text-center mb-3 ">
         login
       </button>
       <p class="mt-2 text-white" style="color: bisque;">
